[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Instructions.tscn" type="PackedScene" id=2]

[sub_resource type="InputEventKey" id=1]
scancode = 16777221

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="GDScript" id=3]
script/source = "extends RichTextLabel




"

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Start" type="Button" parent="."]
margin_left = 70.6664
margin_top = 350.0
margin_right = 270.667
margin_bottom = 400.0
shortcut = SubResource( 2 )
text = "Start Game"

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 372.0
margin_top = 73.75
margin_right = 652.0
margin_bottom = 113.75
bbcode_enabled = true
bbcode_text = "                     Identify The Set
		  Programming Languages Edition"
text = "                     Identify The Set
		  Programming Languages Edition"
scroll_active = false

[node name="Grid_Select" type="OptionButton" parent="."]
margin_left = 95.6664
margin_top = 435.0
margin_right = 245.667
margin_bottom = 465.0
shortcut_in_tooltip = false
text = "3x3"
align = 1
items = [ "3x3", null, false, -1, null, "3x4", null, false, -1, null, "4x3", null, false, -1, null, "4x4", null, false, -1, null ]
selected = 0

[node name="Grid_Error" type="RichTextLabel" parent="."]
editor/display_folded = true
visible = false
margin_left = 376.5
margin_top = 240.0
margin_right = 647.5
margin_bottom = 260.0
meta_underlined = false
text = "               Please Choose Grid Size"
scroll_active = false
script = SubResource( 3 )

[node name="Timer" type="Timer" parent="Grid_Error"]

[node name="Instructions" parent="." instance=ExtResource( 2 )]
margin_right = -27.4

[node name="SettingsButton" type="Button" parent="."]
margin_left = 412.0
margin_top = 615.0
margin_right = 612.0
margin_bottom = 665.0
text = "Settings"

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="item_selected" from="Grid_Select" to="." method="_on_Grid_Select_item_selected"]
[connection signal="timeout" from="Grid_Error/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
